<resources>
    <string name="app_name">BloodEase</string>
    <string name="createacc">Tạo Tài Khoản</string>
    <string name="input_text">Full Name</string>
    <string name="signupbtn">Đăng ký</string>
    <string name="signinbtn">Đăng nhập</string>
    <string name="otpbtn">Tiếp tục</string>
    <string name="hot_tracks">Find donators</string>
    <string name="usually_thi">Usually this process takes hours and days, but now once you log in you will be able to find donors immediately.</string>
    <string name="skip_step">Skip Step</string>
    <string name="a_i_m">10 provinces</string>
    <string name="benefit1">Được cấp Giấy chứng nhận hiến máu tình nguyện</string>
    <string name="benefit2">Được tư vấn về sức khỏe</string>
    <string name="benefit3">Được bồi dưỡng trực tiếp</string>
    <string name="benefit4">Được cấp Giấy chứng nhận hiến máu tình nguyện</string>
    <string name="benefit1_content">
        1. Giấy chứng nhận được trao cho người hiến máu sau mỗi lần hiến máu tình nguyện.\n
        2. Có giá trị để được truyền máu miễn phí bằng số lượng máu đã hiến, khi người thân có nhu cầu sử dụng máu tại tất cả các cơ sở y tế công lập trên toàn quốc.\n
        3. Người hiến máu cần xuất trình Giấy chứng nhận để làm cơ sở cho các cơ sở y tế thực hiện việc truyền máu miễn phí.\n
    </string>
    <string name="benefit2_content">
        1. Được giải thích về quy trình hiến máu và các tai biến có thể xảy ra trong và sau khi hiến máu.\n
        2. Được cung cấp thông tin về dấu hiệu, triệu chứng do nhiễm vi rút viêm gan, HIV và một số bệnh lây qua đường truyền máu, tình dục khác.\n
        3. Được xét nghiệm sàng lọc một số vi rút lây qua đường truyền máu, tình dục (HIV, Giang mai, viêm gan, …) sau khi hiến máu.\n
    </string>
    <string name="benefit3_content">
        1. Ăn nhẹ, nước uống tại chổ; tương đương 30.000 đồng (1 chai trà xanh không độ, 1 hộp chocopie 66gram, 1 hộp bánh Goute 35,5gram).\n
        2. Nhận phần quà tặng giá trị tương đương:\n
            \t- 100.000đ khi hiến máu 250ml.\n
            \t- 150.000đ khi hiến máu 350ml.\n
            \t- 180.000đ khi hiến máu 450ml.\n
    </string>
    <string name="benefit4_content">
        1. Giấy chứng nhận được trao cho người hiến máu sau mỗi lần hiến máu tình nguyện.\n
        2. Có giá trị để được truyền máu miễn phí bằng số lượng máu đã hiến, khi người thân có nhu cầu sử dụng máu tại tất cả các cơ sở y tế công lập trên toàn quốc.\n
        3. Người hiến máu cần xuất trình Giấy chứng nhận để làm cơ sở cho các cơ sở y tế thực hiện việc truyền máu miễn phí.\n
    </string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="default_web_client_id">991653464373-3b4921m96qvcjra4143ict7ccsdhthqs.apps.googleusercontent.com</string>
    <!--    <string name="default_web_client_id">313628342633-14o1gmcghqhchcummaejkkti48n8fjn6.apps.googleusercontent.com</string>-->
    <string name="btn_datlich_bvgn">Đặt lịch</string>
    <string name="ngay_da_chon_bvgn">06/11/2023</string>
    <string name="textABplus">Nhóm Máu AB+</string>
    <string name="textAplus">Nhóm Máu A+</string>
    <string name="textBplus">Nhóm Máu B+</string>
    <string name="textOplus">Nhóm Máu O+</string>
    <string name="textAB">Nhóm Máu AB-</string>
    <string name="textA">Nhóm Máu A-</string>
    <string name="textB">Nhóm Máu B-</string>
    <string name="textO">Nhóm Máu O-</string>
    <string name="unitofblood">Lượng máu</string>
    <string name="amount_of_blood">~525 mL</string>
    <string name="bvgn">Bệnh viện truyền máu - Huyết học TP HCM</string>
    <string name="diachi_bvgn">118 Hồng Bàng, Q.5, Tp. Hồ Chí Minh.</string>
    <string name="so_nguoi_da_dang_ky">178/205 người đăng ký</string>
    <string name="ngay_dang_ky">Ngày đã chọn: 06/11/2023</string>


</resources>